--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
  <body>
   <br>
   <br>
-  <h3>Press <a class="mcTextMineGold" href="" onclick="document.getElementById("menu").element.classList.remove("overlay");">Space</a> To Open Menu!</h3>
+  <h3>Press <a class="mcTextMineGold" href="https://parv66.tk/#menu" >Space</a> To Open Menu!</h3>
   <br>
   <br>
   <br>
    <div id="menu" class="menu overlay">
-    <h3>Press <a class="mcTextMineGold" href="https://parv66.tk/" onclick="document.getElementById("menu").element.classList.add("overlay");">Shift</a> To Exit!</h3>
+    <h3>Press <a class="mcTextMineGold" href="https://parv66.tk/">Shift</a> To Exit!</h3>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
@@ -70,16 +70,6 @@
  </body>
  <script>
   var modal = document.getElementById('menu');
-
-window.onclick = function(event) {
-    if (event.target == modal) {
-      var element = document.getElementById("menu");
-      element.classList.add("overlay");
-    }
-}
- </script>
- <script>
-  var modal = document.getElementById('menu');
   document.body.onkeyup = function(e){
     if(e.keyCode == 32){
         window.location.href = "http://parv66.tk/#menu";
@@ -89,11 +79,5 @@ window.onclick = function(event) {
    }
 }
  </script>
- <script>
-  function menuopenv2() {
-  var element = document.getElementById("menu");
-  element.classList.remove("overlay");
-}
-  </script>
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </html>
