--- a/index.html
+++ b/index.html
@@ -37,15 +37,25 @@
      <meta property="og:url" content="https://parv66.tk" />
      <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg" />
   </head>
+ <script>
+$(document).ready(function(){
+  $("#menutoggle").click(function(){
+    $("#menu").toggleClass("overlay");
+  });
+  $("#menutogglev2").click(function(){
+    $("#menu").toggleClass("overlay");
+  });
+});
+</script>
  <body>
   <br>
   <br>
-  <h3>Press <a class="mcTextMineGold" href="https://parv66.tk/#menu" >Space</a> To Open Menu!</h3>
+  <h3>Press <a id="menutoggle" class="mcTextMineGold">Space</a> To Open Menu!</h3>
   <br>
   <br>
   <br>
    <div id="menu" class="menu overlay">
-    <h3>Press <a class="mcTextMineGold" href="https://parv66.tk/">Shift</a> To Exit!</h3>
+    <h3>Press <a id="menutogglev2" class="mcTextMineGold">Shift</a> To Exit!</h3>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
