--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ $(document).ready(function(){
  <body>
   <br>
   <br>
-  <h3>Press <a id="menutoggle" class="mcTextMineGold">Space</a> To Open Menu!</h3>
+  <h3>Press <a id="menutoggle" href="" class="mcTextMineGold">Space</a> To Open Menu!</h3>
   <br>
   <br>
   <br>
    <div id="menu" class="menu overlay">
-    <h3>Press <a id="menutogglev2" class="mcTextMineGold">Shift</a> To Exit!</h3>
+    <h3>Press <a id="menutogglev2" href="" class="mcTextMineGold">Shift</a> To Exit!</h3>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
@@ -71,9 +71,9 @@ $(document).ready(function(){
      <audio id="errors" src="error.666.ogg"></audio>
    </div>
   <footer>
-   <h4>footer</h4><br>
-   <a href="#" class="cord"></a>
-   <a href="#" class="youtube"></a>
+   <h4>footer is loocking gud</h4><br>
+   <a href="" class="cord"></a>
+   <a href="" class="youtube"></a>
   </footer>
  </body>
  <script>
