--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ $(document).ready(function(){
  <body>
   <br>
   <br>
-  <h3>Press <a id="menutoggle" href="" class="mcTextMineGold">Space</a> To Open Menu!</h3>
+  <h3>Press <a id="menutoggle" href="#menu" class="mcTextMineGold">Space</a> To Open Menu!</h3>
   <br>
   <br>
   <br>
    <div id="menu" class="menu overlay">
-    <h3>Press <a id="menutogglev2" href="" class="mcTextMineGold">Shift</a> To Exit!</h3>
+    <h3>Press <a id="menutogglev2" href="#" class="mcTextMineGold">Shift</a> To Exit!</h3>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
