--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@ $(document).ready(function(){
   document.body.onkeyup = function(e){
     if(e.keyCode == 32){
         window.location.href = "http://parv66.tk/#menu";
+        document.querySelector("#menu").classList.toggle("overlay");
     }
    else if(e.keyCode == 16){
         window.location.href = "http://parv66.tk";
+        document.querySelector("#menu").classList.toggle("overlay");
    }
 }
  </script>
