--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@ $(document).ready(function(){
   });
 });
 </script>
+  <script>
+document.querySelector(document).ready(function(){
+  document.querySelector("#menutoggle").click(function(){
+    document.querySelector("#menu").classList.toggle("overlay");
+  });
+  document.querySelector("#menutogglev2").click(function(){
+    document.querySelector("#menu").classList.toggle("overlay");
+  });
+});
+</script>
   <br>
   <br>
   <h3>Press <a id="menutoggle" href="#" class="mcTextMineGold">Space</a> To Open Menu!</h3>
