--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
      <meta property="og:description" content="PARV66.inc idk what else" />
      <meta property="og:url" content="https://parv66.tk" />
      <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg" />
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
  <body>
   <script>
@@ -81,7 +82,7 @@ document.querySelector(document).ready(function(){
      <audio id="errors" src="error.666.ogg"></audio>
    </div>
   <footer>
-   <h4>footer yay</h4><br>
+   <h4>footer menupog?</h4><br>
    <a href="" class="cord"></a>
    <a href="" class="youtube"></a>
   </footer>
