--- a/index.html
+++ b/index.html
@@ -58,14 +58,24 @@ document.querySelector(document).ready(function(){
   });
 });
 </script>
+  <script>
+  document.body.onkeyup = function(e){
+    if(e.keyCode == 32){
+        document.querySelector("#menu").classList.toggle("overlay");
+    }
+   else if(e.keyCode == 16){
+        document.querySelector("#menu").classList.toggle("overlay");
+   }
+}
+ </script>
   <br>
   <br>
-  <h3>Press <a id="menutoggle" href="#" class="mcTextMineGold">Space</a> To Open Menu!</h3>
+  <h3>Press <a id="menutoggle" class="mcTextMineGold">Space</a> To Open Menu!</h3>
   <br>
   <br>
   <br>
    <div id="menu" class="menu overlay">
-    <h3>Press <a id="menutogglev2" href="#" class="mcTextMineGold">Shift</a> To Exit!</h3>
+    <h3>Press <a id="menutogglev2" class="mcTextMineGold">Shift</a> To Exit!</h3>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
@@ -87,15 +97,4 @@ document.querySelector(document).ready(function(){
    <a href="" class="youtube"></a>
   </footer>
  </body>
- <script>
-  document.body.onkeyup = function(e){
-    if(e.keyCode == 32){
-        document.querySelector("#menu").classList.toggle("overlay");
-    }
-   else if(e.keyCode == 16){
-        document.querySelector("#menu").classList.toggle("overlay");
-   }
-}
- </script>
- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </html>
