--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ document.querySelector(document).ready(function(){
      <audio id="errors" src="error.666.ogg"></audio>
    </div>
   <footer>
-   <h4>footer menupog?</h4><br>
+   <h4>footer</h4><br>
    <a href="" class="cord"></a>
    <a href="" class="youtube"></a>
   </footer>
