--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
      <meta property="og:url" content="https://parv66.tk" />
      <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg" />
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="key.js"></script>
   </head>
  <body>
   <script>
@@ -70,7 +71,7 @@ document.querySelector(document).ready(function(){
  </script>
   <br>
   <br>
-  <h3>Press <a id="menutoggle" class="mcTextMineGold">Space</a> To Open Menu!</h3>
+  <h3>Press <a id="menutoggle" class="mcTextMine">Space</a> To Open Menu!</h3>
   <br>
   <br>
   <br>
