--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ document.querySelector(document).ready(function(){
  </script>
   <br>
   <br>
-  <h3>Press <a id="menutoggle" class="mcTextMine">Space</a> To Open Menu!</h3>
+  <h3>Press <a id="menutoggle" class="mcTextPurple">Space</a> To Open Menu!</h3>
   <br>
   <br>
   <br>
