--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ document.querySelector(document).ready(function(){
   <br>
   <br>
    <div id="menu" class="menu overlay">
-    <h3>Press <a id="menutogglev2" class="mcTextMineGold">Shift</a> To Exit!</h3>
+    <h3>Press <a id="menutogglev2" class="mcTextMineGold">Space</a> To Exit!</h3>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
             <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
