--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="key.js"></script>
   </head>
- <body>
+ <body id="body">
   <script>
 $(document).ready(function(){
   $("#menutoggle").click(function(){
