--- a/trade/index.html
+++ b/trade/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>e</title>
-    <link rel="stylesheet" href="creations.css">
+    <link rel="stylesheet" href="https://parv66.tk/creations/creations.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
     <meta property="og:type" content="parv66.tk/creations/">
     <meta property="og:title" content="Awesome and cool and good and stuff">
