--- a/creations/index.html
+++ b/creations/index.html
@@ -13,8 +13,8 @@
     <div class="main1">
   <h1>Large Chest</h1>
   <div class="boxes">
-    <div class="box" ondrop="drop(event)" ondragover="allowDrop(event)"><a draggable="true" ondragstart="drag(event)" class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></div>
-    <div class="box" ondrop="drop(event)" ondragover="allowDrop(event)"><a class="papple" href="#" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></div>
+    <div class="box" ondrop="drop(event)" ondragover="allowDrop(event)"><a class="copperplusplus" draggable="true" ondragstart="drag(event)" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></div>
+    <div class="box" ondrop="drop(event)" ondragover="allowDrop(event)"><a class="papple" draggable="true" ondragstart="drag(event)" href="#" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></div>
     <div class="box" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     <div class="box" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
     <div class="box" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
