--- a/trade/index.html
+++ b/trade/index.html
@@ -1,16 +1,16 @@
 <html>
   <head>
     <title>e</title>
-    <link rel="stylesheet" href="https://parv66.tk/creations/creations.css">
+    <link rel="stylesheet" href="https://parv66.tk/trade/trade.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
-    <meta property="og:type" content="parv66.tk/creations/">
+    <meta property="og:type" content="parv66.tk/trade/">
     <meta property="og:title" content="Awesome and cool and good and stuff">
-    <meta property="og:description" content="My *ahEm*- My- *cough-cough* Work i made (pls)">
-    <meta property="og:url" content="https://parv66.tk/creations/">
+    <meta property="og:description" content="Download Page For Parv66's Latest Addons">
+    <meta property="og:url" content="https://parv66.tk/trade/">
     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
   </head>
   <body>
-   <img class="chest" src="https://parv66.tk/chest.png">
+   <img class="villager" src="https://parv66.tk/trade/villager.png">
     <div id="minetip-tooltip" style="display: none;">
      <span class="minetip-title" id="minetip-text">Minecraft Tip</span>
     </div>
