--- a/trade/index.html
+++ b/trade/index.html
@@ -126,6 +126,6 @@
 </div>
   
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="https://parv66.tk/creations/creations.js"></script>
+    <script src="https://parv66.tk/trade/trade.js"></script>
 
 </body></html>
