--- a/trade/index.html
+++ b/trade/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
   </head>
   <body>
-    <div id="minetip-tooltip" style="display: none; position: absolute; top: 514px; left: 357px;">Placeable Apples Addon</div>
+    <div id="minetip-tooltip" style="display: none; position: absolute; top: 487px; left: 343px;">Copper++ Addon</div>
     <div class="tradeSidePanel"></div>
 <div class="main1">
      <h1 style="text-align: center;">Trade Panel</h1>
@@ -18,7 +18,7 @@
 
     
     <div class="tbox2"></div>
-    <div class="tbtn"></div>
+    <button class="tbtn">Trade</button>
 </div>
   
  <h1>Inventory</h1>
