--- a/trade/index.html
+++ b/trade/index.html
@@ -9,8 +9,20 @@
     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
   </head>
   <body>
-    <div id="minetip-tooltip" style="display: none; position: absolute; top: 487px; left: 343px;">Copper++ Addon</div>
-    <div class="tradeSidePanel"></div>
+    <div id="minetip-tooltip" style="display: none; position: absolute; top: 342px; left: 262px;">Copper++ Addon</div>
+    <div class="tradeSidePanel">
+    <div class="cage"><h1 class="white">Addons And Maps Download:</h1>
+<div class="toption">
+    <a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+    <img class="tarrow" src="https://parv66.tk/gui/images/arrow.png" alt="">
+<a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></div>
+<div class="toption">
+    <a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+    <img class="tarrow" src="https://parv66.tk/gui/images/arrow.png" alt="">
+    <a class="papple" href="#" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></div>
+
+<div class="toption"></div><div class="toption"></div></div>
+</div>
 <div class="main1">
      <h1 style="text-align: center;">Trade Panel</h1>
      <div class="tradepanel">
@@ -24,8 +36,8 @@
  <h1>Inventory</h1>
   
   <div class="boxes2">
-    <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></div>
-    <div class="box"><a class="papple" href="#" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></div>
+    <div class="box"></div>
+    <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
@@ -71,6 +83,7 @@
   
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://parv66.tk/trade/trade.js"></script>
+
 
 
 </body></html>
