--- a/trade/index.html
+++ b/trade/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
   </head>
   <body>
-    <div id="minetip-tooltip" style="display: none; position: absolute; top: 342px; left: 262px;">Copper++ Addon</div>
+    <div id="minetip-tooltip" style="display: none; position: absolute; top: 330px; left: 110px;">currency</div>
     <div class="tradeSidePanel">
     <div class="cage"><h1 class="white">Addons And Maps Download:</h1>
 <div class="toption">
@@ -83,6 +83,7 @@
   
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://parv66.tk/trade/trade.js"></script>
+
 
 
 
