--- a/trade/index.html
+++ b/trade/index.html
@@ -36,9 +36,9 @@
  <h1>Inventory</h1>
   
   <div class="boxes2">
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div class="box"><a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a></div>
+    <div class="box"><a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a></div>
+    <div class="box"><a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
