--- a/trade/index.html
+++ b/trade/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="https://parv66.tk/trade/trade.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
     <meta property="og:type" content="parv66.tk/trade/">
-    <meta property="og:title" content="Awesome and cool and good and stuff">
+    <meta property="og:title" content="Addons!">
     <meta property="og:description" content="Download Page For Parv66's Latest Addons">
     <meta property="og:url" content="https://parv66.tk/trade/">
     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
