--- a/creations/index.html
+++ b/creations/index.html
@@ -1,4 +1,5 @@
 <html><head>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="creations.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
     <meta property="og:type" content="parv66.tk/creations/">
