--- a/trade/index.html
+++ b/trade/index.html
@@ -84,8 +84,5 @@
   
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://parv66.tk/trade/trade.js"></script>
-
-
-
-
+    <script src="https://parv66.tk/gui/itemdrag.js"></script>
 </body></html>
