--- a/trade/index.html
+++ b/trade/index.html
@@ -2,6 +2,7 @@
     <title>e</title>
     <link rel="stylesheet" href="https://parv66.tk/trade/trade.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
+    <link rel="stylesheet" href="https://parv66.tk/gui/itemdrag.css">
     <meta name="viewport" content="width=device-width">
     <meta property="og:type" content="parv66.tk/trade/">
     <meta property="og:title" content="Addons!">
