--- a/trade/index.html
+++ b/trade/index.html
@@ -29,7 +29,7 @@
 <div class="main1">
      <h1 style="text-align: center;">Trade Panel</h1>
      <div class="tradepanel">
-    <div class="tbox1"></div><img class="arrow" src="https://parv66.tk/gui/images/arrow.png" alt="">
+    <div class="tbox1" id="38"></div><img class="arrow" src="https://parv66.tk/gui/images/arrow.png" alt="">
 
     
     <div class="tbox2"></div>
