--- a/trade/index.html
+++ b/trade/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://parv66.tk/style.css">
     <link rel="stylesheet" href="https://parv66.tk/gui/itemdrag.css">
     <link rel="stylesheet" href="https://parv66.tk/gui/addonitems.css">
+    <link rel="stylesheet" href="https://parv66.tk/gui/itemhover.css">
     <meta name="viewport" content="width=device-width">
     <meta property="og:type" content="parv66.tk/trade/">
     <meta property="og:title" content="Addons!">
@@ -90,4 +91,5 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://parv66.tk/trade/trade.js"></script>
     <script src="https://parv66.tk/gui/itemdrag.js"></script>
+    <script src="https://parv66.tk/gui/itemhover.js"></script>
 </body></html>
