--- a/trade/index.html
+++ b/trade/index.html
@@ -43,10 +43,11 @@
     <div class="box" id="1"><a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a></div>
     <div class="box" id="2"><a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a></div>
     <div class="box" id="3"><a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a></div>
-    <div class="box" id="4"><div class="item" id="pic_diamond">
-              <img src="https://gamepedia.cursecdn.com/minecraft_gamepedia/thumb/7/7a/Diamond_Pickaxe_JE2_BE2.png/150px-Diamond_Pickaxe_JE2_BE2.png?version=a87b813f642bfc772f30e1b74dbafe20"/>
-              <div class="number"></div>
-            </div></div>
+    <div class="box" id="4">
+        <div class="item" id="currency">
+            <a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+        </div>
+      </div>
     <div class="box" id="5"></div>
     <div class="box" id="6"></div>
     <div class="box" id="7"></div>
