--- a/trade/index.html
+++ b/trade/index.html
@@ -42,22 +42,22 @@
   <div class="boxes2">
     <div class="box" id="1">
         <div class="item" id="currency">
-            <a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+            <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="2">
         <div class="item" id="currency">
-            <a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+            <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="3">
         <div class="item" id="currency">
-            <a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+            <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="4">
         <div class="item" id="currency">
-            <a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+            <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="5"></div>
