--- a/trade/index.html
+++ b/trade/index.html
@@ -16,16 +16,16 @@
     <div id="minetip-tooltip" style="display: none; position: absolute; top: 330px; left: 110px;">currency</div>
     <div class="tradeSidePanel">
     <div class="cage"><h1 class="white">Addons And Maps Download:</h1>
-<button class="toption0">
+<button id="toption0" class="toption">
     <a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
     <img class="tarrow" src="https://parv66.tk/gui/images/arrow.png" alt="">
 <a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></button>
-<button class="toption1">
+<button id="toption1" class="toption">
     <a class="currency" href="#" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
     <img class="tarrow" src="https://parv66.tk/gui/images/arrow.png" alt="">
     <a class="papple" href="#" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></button>
-<button class="toption2"></button>
-<button class="toption3"></button>
+<button id="toption2" class="toption"></button>
+<button id="toption3" class="toption"></button>
 <div class="main1">
      <h1 style="text-align: center;">Trade Panel</h1>
      <div class="tradepanel">
