--- a/trade/index.html
+++ b/trade/index.html
@@ -102,4 +102,5 @@
     <script src="https://parv66.tk/trade/trade.js"></script>
     <script src="https://parv66.tk/gui/itemdrag.js"></script>
     <script src="https://parv66.tk/gui/itemhover.js"></script>
+    <script> $(".toption").on("click", function() { $(this).addClass("toptionPos"); }); </script>
 </body></html>
