--- a/trade/index.html
+++ b/trade/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
   </head>
   <body>
-    <div id="minetip-tooltip" style="display: none; position: absolute; top: 330px; left: 110px;">currency</div>
+    <div id="minetip-tooltip" style="display: none; position: absolute; top: 386px; left: 244px;">Placeable Apples Addon</div>
     <div class="tradeSidePanel">
     <div class="cage"><h1 class="white">Addons And Maps Download:</h1>
 <button id="toption0" class="toption">
@@ -26,6 +26,7 @@
     <a class="papple" href="#" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></button>
 <button id="toption2" class="toption"></button>
 <button id="toption3" class="toption"></button>
+</div></div>
 <div class="main1">
      <h1 style="text-align: center;">Trade Panel</h1>
      <div class="tradepanel">
@@ -38,22 +39,22 @@
   
   <div class="boxes2">
     <div class="box" id="1">
-        <div class="item" id="currency">
+        <div class="item" id="currency" draggable="false">
             <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="2">
-        <div class="item" id="currency">
+        <div class="item" id="currency" draggable="false">
             <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="3">
-        <div class="item" id="currency">
+        <div class="item" id="currency" draggable="false">
             <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="4">
-        <div class="item" id="currency">
+        <div class="item" id="currency" draggable="false">
             <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
@@ -103,4 +104,5 @@
     <script src="https://parv66.tk/gui/itemdrag.js"></script>
     <script src="https://parv66.tk/gui/itemhover.js"></script>
     <script> $(".toption").on("click", function() { $(this).addClass("toptionPos"); }); </script>
-</body></html>
+    </body>
+</html>
