--- a/trade/index.html
+++ b/trade/index.html
@@ -103,6 +103,12 @@
     <script src="https://parv66.tk/trade/trade.js"></script>
     <script src="https://parv66.tk/gui/itemdrag.js"></script>
     <script src="https://parv66.tk/gui/itemhover.js"></script>
-    <script> $(".toption").on("click", function() { $(this).addClass("toptionPos"); }); </script>
+    <script> 
+        $(".toption").on("click", function() {
+        if($('#38').find('#currency').length == 1) {
+        var $el = $('.copperplusplus').clone();
+        $('#tbox2').append($el);
+ }});
+      </script>
     </body>
 </html>
